hphp/hack/test/typecheck/class_top_var.php
<?hh
class BadVarExample {
  public function testBadVarExample() {
    $this->thisFunctionShouldExist();
  }

  var $foo;

  public function thisFunctionShouldExist() {}
}
